# SiteInsite

./: .gitignore  CODE_OF_CONDUCT.md  COMPETITOR_FEATURE_CHANGELOG.md  CONFIRMATION_PAGE_README.md  CONTRIBUTING.md  LICENSE  PROJECT_DEEP_SCAN.md  README.md  SECURITY.md  TESTING_GUIDE.md  docker-compose.yml  env.example  package-lock.json  start-backend.sh  start-fedora.sh  start-frontend.sh
backend/: Dockerfile  README.md  app.py  pdf_config.py  pyproject.toml  requirements.txt
backend/core/: config.py  deps.py  types.py  utils.py
backend/crawl/: __init__.py  bot_avoidance.py  fetch.py  frontier.py  performance.py  render_pool.py  robots.py  runner.py
backend/extract/: aggregate.py  docx_.py  files_words_links.py  html.py  images.py  json_csv.py  nav_footer.py  pdfs.py  pool.py  rollups.py
backend/insights/: __init__.py  comparison.py  crawl_quality.py  page_type.py  seo_keywords.py  summary.py
backend/insights/seo/: __init__.py  health.py  keywords.py
backend/routers/: __init__.py  competitors.py  confirm.py  insights.py  pages.py  review.py  runs.py
backend/runs/1761584004/: meta.json  pages.json  pages_index.json
backend/runs/1761584014/: meta.json  pages.json  pages_index.json
backend/scraper_advanced/: Dockerfile  README.md  __init__.py  article_extractor.py  cli.py  cloudflare_bypass.py  config.yaml  config_loader.py  demo.py  example.py  fingerprint_spoofer.py  http_client.py  human_behavior.py  proxy_manager.py  scraper.py  selenium_fallback.py
backend/storage/: async_io.py  confirmation.py  runs.py  seed.py  simhash.py
frontend/: Dockerfile  (+4 more)
(+690 files in other folders)
