[tool.poetry]
name = "siteinsite"
version = "1.0.0"
description = "SiteInsite - Website Intelligence Engine for scanning websites and generating comprehensive insight reports"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
readability-lxml = "^0.8.1"
trafilatura = "^1.6.4"
requests = "^2.31.0"
PyPDF2 = "^3.0.1"
pdfminer-six = "^20231228"
python-docx = "^1.1.0"
Pillow = "^10.1.0"
pandas = "^2.1.4"
orjson = "^3.9.10"
tiktoken = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true


